@@ -51,6 +51,24 @@ void GB_reduce_to_scalar_iso        // s = reduce (A) where A is iso
     // reduce n entries, all equal to a, to the scalar s, in O(log(n)) time
     //--------------------------------------------------------------------------
 
-    GB_reduce_worker_iso (s, freduce, a, n, zsize) ;
+    if (n == INT64_MAX)
+    { 
+        // A has too many entries to reduce in a single step.  The only way
+        // this can occur is if A is a huge full iso-valued matrix, where vlen
+        // * vdim caused uint64_t overflow in GB_nnz_full and returned
+        // INT64_MAX.  Reduce the matrix in two steps: first reducing each
+        // vector of size vlen to a scalar t, obtainting an implicit iso full
+        // vector T of size vdim.  Each entry in this vector T has the value t,
+        // and then this vector T is reduced to the result s.
+        GBURBLE ("(reduce huge iso full matrix to scalar) ") ;
+        GB_void t [GB_VLA(zsize)] ;
+        GB_reduce_worker_iso (t, freduce, a, A->vlen, zsize) ;
+        GB_reduce_worker_iso (s, freduce, t, A->vdim, zsize) ;
+    }
+    else
+    { 
+        GBURBLE ("(reduce iso matrix to scalar) ") ;
+        GB_reduce_worker_iso (s, freduce, a, n, zsize) ;
+    }
 }
 
