@@ -79,8 +79,8 @@ GB_mex.h        include file for the mexFunctions
 Template/*.c    a template file for building two mexFunctions:
                 GB_mex_Matrix_build and GB_mex_Vector_build.
 
-make.m          compiles the Test interface to GraphBLAS (links with
-                dynamic -lgraphblas)
+testmake.m      compiles the Test interface to GraphBLAS (links with
+                dynamic -lgraphblas_matlab or -lgraphblas)
 
 debug_off.m     turns off malloc debugging
 debug_on.m      turns on malloc debugging; the interface will be *very* slow,
