@@ -1,7 +1,9 @@
-June 1, 2024: version 9.3.0
+June XX, 2024: version 9.3.0    FIXME NOW
 
     * code restructuring:  Source folder split into many subfolders, and
         some files and internal functions renamed.  No visible external change.
+    * (54) bug fix: reducing a huge iso full matrix to a scalar resulted in
+        integer overflow if nrows*ncols was larger than about 2^60.
 
 May 22, 2024: version 9.2.0
 
